mobile-form-covering-button-fix

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 	padding: 10px;
 	display: flex;
 	flex-direction: column;
-	height: 270px;
+	height: 290px;
 	background-color: white;
 	width: 250px;
 	border-radius: 10px;
@@ -95,7 +95,7 @@ body {
 }
 
 .expense-container {
-	height: 290px;
+	height: 310px;
 	width: 275px;
 	display: flex;
 	justify-content: flex-start;
